Fix alignment/sizing of results elements and retry button

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ body {
     flex-direction: column;
     margin: 0px;
     background-color: lightskyblue;
-
+    align-items: center;
+    gap: 25px;
 }
 .header {
     display: flex;
@@ -19,6 +20,10 @@ body {
 button {
     margin: 8px;
     border-radius: 4px;
+    height: 50px;
+    width: 125px;
+    background-color: crimson;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 #roundResult {
     display: flex;
@@ -31,11 +36,18 @@ ul {
     margin-top: 50px;
     display: flex;
     list-style-type: none;
-    justify-content: space-around;
+    justify-content: space-between;
+    width: 600px;
+    
 }
-p {
-    text-align: center;
+li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 900;
+    font-size:larger;
 }
+
 .pickImg {
     display: flex;
     justify-content:center;
@@ -46,4 +58,8 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 900;
+    font-size:larger;
 }
+}
+.restart
